# spark-cli

./: README.md  pyproject.toml  registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docker/live/: entrypoint.sh
docs/: ACCESS_SANDBOX_UX_AUDIT_2026-05-10.md  LAUNCH_RUNBOOK.md  LAUNCH_SECURITY_AUDIT_2026-04-24.md  PRODUCTION_INSTALLER_AUDIT_2026-04-25.md  SPARK_ECOSYSTEM_LAUNCH.md  SPARK_LIVE_DOCKER_RAILWAY.md  SPARK_NORMIE_ONBOARDING_AND_GATEWAY_TEST.md  STATUS.md
docs/design/: lessons-from-todays-install.md  spark-installer-design-v1.md  spark-onboarding-contract-v1.md  user-flows-and-diagrams.md
scripts/: install.ps1  install.sh  installer-manifest.json
src/spark_cli/: __init__.py  cli.py  system_map.py
src/spark_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_docker_entrypoint.py  test_system_map.py
