[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-cli"
version = "0.1.0"
description = "Local Spark installer and operator CLI spike"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
spark = "spark_cli.cli:main"
spark-local = "spark_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
